# algo

./: README.md  pyproject.toml  pytest.toml
sprint1/: b.py  c.py  d.py  e.py  final1.py  final2.py  g.py  g2.py  g_standard.py  h.py  i.py  k.py  l.py  а.py
sprint1/tests/: b_test.py  c_test.py  d_test.py  g_test.py  h_test.py
sprint2/: a.py  b.py  c.py  d.py  e.py  f.py  final1.py  final2.py  g.py  h.py  i.py  j.py  k.py  l.py
sprint2/tests/: g_test.py  test_c.py  test_d.py  test_e.py  test_final1.py  test_i.py  test_j.py
sprint4/: a.py  b.py  d.py  e.py  f.py  final1.py  final2.py  g.py  h.py  i.py  j.py  l.py  с.py
sprint4/tests/: c_test.py  final2_input.txt  final2_output.txt  final2_test.py  input.txt  output.txt  test_final1.py  test_final2_8.txt  test_final2_8_expected.txt
sprint4/tests/final1/: 08  09  10
sprint4/tests/sprint3/: a.py  b.py  d.py  e.py  f.py  final1.py  final2.py  g.py  h.py  i.py  j.py  k.py  l.py  m.py  n.py  o.py  o_profile.py  p.py  с.py
sprint4/tests/sprint3/tests/: a_test.py  h_test.py  k_test.py  l_test.py  test_final1.py  (+1 more)
sprint5/: final1.py  final2.py  final2_old.py  node.py  task_a.py  task_b.py  task_b2.py  task_i.py  task_i2.py  task_j.py  task_k.py  task_l.py  task_m.py
sprint5/tests/: test_final1.py  test_final2.py  test_final2_new.py  test_task_a.py  test_task_b.py  test_task_j.py  test_taskb2.py
sprint6/: final1.py  final2.py  task_a.py  task_b.py  task_c.py  task_d.py  task_e.py  task_f.py  task_g.py  task_h.py  task_j.py  task_k.py  task_l.py  task_m.py
sprint6/tests/: task_c_input.txt  test_task_g.py
